--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,7 @@
+Unreleased
+- Refactored scan.py script, renamed to loudgain-scanner.py
+- Strictly enforce libebur128 minimum version 1.2.4
+
 v1.0 (2022-2-21)
 - Fork from Moonbase59/loudgain v0.6.8
 - Native Windows port
