--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+Unreleased
+ - Changed project name to rsgain
+ - Added "Easy Mode" with recursive directory scanning. Old command line syntax now known as "Custom Mode"
+ - Added multithreaded scanning
+ - Added override feature for Easy Mode
+ 
+
 v1.0.1 (2022-4-15)
 - Refactored scan.py script, renamed to loudgain-scanner.py
 - Strictly enforce libebur128 minimum version 1.2.4
