--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 Unreleased
-- Easy Mode: Support scanning directories with multiple file types
-- Fix -c long option
+- Support scanning directories with multiple file types in Easy Mode
+- Redesigned the multithreading mode to increase reliability and effiency
+- Progress update in multithreading mode now detects the width of the console and limits it so the output doesn't wrap to a new line on long directory names
+- Fix long options
+- Fix a segfault that occurs when scanning some corrupt MP3 files
+- Windows: Upgrade to FFmpeg 5
 
 v3.1.1 (2022-11-15)
 - Fix ID3v2 version parsing bug
