Change scan log file extension to tsv
This extension accurately represents the format of the file, which is
TSV (tab-separated values) as opposed to CSV (comma-separated values).

--- a/docs/rsgain.1
+++ b/docs/rsgain.1
@@ -74,7 +74,7 @@ Scan files with \fBn\fR parallel threads\.
 Load scan preset \fBs\fR\.
 .TP
 \fB\-O\fR, \fB\-\-output\fR
-Output tab\-delimited scan data to CSV file per directory\.
+Output tab\-delimited scan data to TSV file per directory\.
 .TP
 \fB\-O s\fR, \fB\-\-output=s\fR
 Output with sep header (needed for Microsoft Excel compatibility)\.
