Compress manpage automatically before installation

--- a/docs/rsgain.1
+++ b/docs/rsgain.1
@@ -165,6 +165,9 @@ Output with sep header (needed for Microsoft Excel compatibility)\.
 \fB\-O a\fR, \fB\-\-output=a\fR
 Output with files sorted in alphanumeric order\.
 .TP
+\fB\-p\fR, \fB\-\-preserve_mtimes\fR
+Preserve file mtimes\.
+.TP
 \fB\-q\fR, \fB\-\-quiet\fR
 Don't print scanning status messages\.
 .
