--- a/docs/rsgain.1
+++ b/docs/rsgain.1
@@ -165,7 +165,7 @@ Output with sep header (needed for Microsoft Excel compatibility)\.
 \fB\-O a\fR, \fB\-\-output=a\fR
 Output with files sorted in alphanumeric order\.
 .TP
-\fB\-p\fR, \fB\-\-preserve_mtimes\fR
+\fB\-p\fR, \fB\-\-preserve-mtimes\fR
 Preserve file mtimes\.
 .TP
 \fB\-q\fR, \fB\-\-quiet\fR
